# its

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
itg/: main.py  manage.py
itg/itg/: asgi.py  settings.py  urls.py  wsgi.py
itg/news/: models.py  urls.py  views.py
itg/news/templates/news/: catalog.html
itg/news/templatetags/: my_custom_tag.py
itg/static/: manifest.json
itg/templates/: base.html  catalog.html  contacts.html  footer.html  main.html  news_detail.html
